; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/virtio/console/extr_virtio_console.c_vtcon_port_populate.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/virtio/console/extr_virtio_console.c_vtcon_port_populate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vtcon_port = type { %struct.virtqueue* }
%struct.virtqueue = type { i32 }

@ENOSPC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vtcon_port*)* @vtcon_port_populate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vtcon_port_populate(%struct.vtcon_port* %0) #0 {
  %2 = alloca %struct.vtcon_port*, align 8
  %3 = alloca %struct.virtqueue*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.vtcon_port* %0, %struct.vtcon_port** %2, align 8
  %6 = load %struct.vtcon_port*, %struct.vtcon_port** %2, align 8
  %7 = getelementptr inbounds %struct.vtcon_port, %struct.vtcon_port* %6, i32 0, i32 0
  %8 = load %struct.virtqueue*, %struct.virtqueue** %7, align 8
  store %struct.virtqueue* %8, %struct.virtqueue** %3, align 8
  %9 = load i32, i32* @ENOSPC, align 4
  store i32 %9, i32* %5, align 4
  store i32 0, i32* %4, align 4
  br label %10

10:                                               ; preds = %22, %1
  %11 = load %struct.virtqueue*, %struct.virtqueue** %3, align 8
  %12 = call i32 @virtqueue_full(%struct.virtqueue* %11)
  %13 = icmp ne i32 %12, 0
  %14 = xor i1 %13, true
  br i1 %14, label %15, label %25

15:                                               ; preds = %10
  %16 = load %struct.vtcon_port*, %struct.vtcon_port** %2, align 8
  %17 = call i32 @vtcon_port_create_buf(%struct.vtcon_port* %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  br label %25

21:                                               ; preds = %15
  br label %22

22:                                               ; preds = %21
  %23 = load i32, i32* %4, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %4, align 4
  br label %10

25:                                               ; preds = %20, %10
  %26 = load i32, i32* %4, align 4
  %27 = icmp sgt i32 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %25
  %29 = load %struct.virtqueue*, %struct.virtqueue** %3, align 8
  %30 = call i32 @virtqueue_notify(%struct.virtqueue* %29)
  store i32 0, i32* %5, align 4
  br label %31

31:                                               ; preds = %28, %25
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @virtqueue_full(%struct.virtqueue*) #1

declare dso_local i32 @vtcon_port_create_buf(%struct.vtcon_port*) #1

declare dso_local i32 @virtqueue_notify(%struct.virtqueue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
